# DOCX-RAG-TOOL

./: README.md
backend/: .env  app.js  index.js  package-lock.json  package.json  run_agent.py
backend/db/: chroma.sqlite3
db/: chroma.sqlite3
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.js
rag_tool/: README.md  Untitled.docx  pyproject.toml
rag_tool/db/: chroma.sqlite3
rag_tool/src/rag_tool/: crew.py  main.py
rag_tool/src/rag_tool/config/: agents.yaml  tasks.yaml
