[project]
name = "rag_tool"
version = "0.1.0"
description = "RAG_TOOL using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.9,<1.0.0"
]

[project.scripts]
rag_tool = "rag_tool.main:run"
run_crew = "rag_tool.main:run"
train = "rag_tool.main:train"
replay = "rag_tool.main:replay"
test = "rag_tool.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
